# ADNI_CFM

./: .gitignore  LICENSE  README.md  config.yaml  create_dataset.py  dataset.py  pyproject.toml  requirements-test.txt  requirements.txt  sampling.py  train.py
.github/workflows/: tests.yml
model/: fp16_util.py  logger.py  modules.py  trainer.py  unet_ADNI.py
tests/: conftest.py  pytest.ini  test_dataset.py  test_fp16_util.py  test_model.py  test_pipeline.py  test_sampling.py  test_trainer.py
