[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfm-adni"
version = "0.1.0"
authors = [
  { name = "Francesca Bechere" },
]
description = "Conditional Flow Matching pipeline for ADNI brain MRI generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
  "brain-mri",
  "conditional-flow-matching",
  "adni",
  "medical-imaging",
]
maintainers = [
  { name = "Francesca Bechere" },
]
classifiers = [
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "torch",
  "torchcfm",
  "torchdiffeq>=0.2.3",
  "numpy<2.0",
  "nibabel>=5.4.0",
  "scikit-learn>=1.7.0",
  "pyyaml>=6.0",
  "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[tool.setuptools]
include-package-data = true
py-modules = ["dataset", "sampling", "train", "create_dataset"]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["dataset", "sampling", "model"]
omit = [
  "tests/*",
  "/tmp/*",
  "model/logger.py",
  "model/fp16_util.py",
  "model/modules.py",
  "model/__init__.py",
]